--- a/archive-collection/action.yml
+++ b/archive-collection/action.yml
@@ -16,6 +16,7 @@ runs:
       env:
         CONTENT_TYPE: ${{ inputs.content-type }}
       run: |
+        echo "PREPARING ENVIRONMENT"
         rm -rf .[^.]* * 
         types=()
         types+=("blueprints")
@@ -47,6 +48,7 @@ runs:
       env:
         CONTENT_TYPE: ${{ inputs.content-type }}
       run: |
+        echo "CREATING TAR FILE ARTIFACT FOR CONTENT TYPE"
         rm -rf ./tmp
         mkdir -p ./tmp
         if [ -d "CMP/${CONTENT_TYPE}" ] ; then
@@ -66,6 +68,7 @@ runs:
             rm -f "$CONTENT_TYPE".tar.gz
             echo "::set-output name=have-tarfile::false"
           fi
+          echo "Output: ${{steps.tarfile.outputs.have-tarfile}}"
           cd ..
           rm -f ./tarfiles.lst
         fi
