--- a/archive-collection/action.yml
+++ b/archive-collection/action.yml
@@ -75,7 +75,7 @@ runs:
             rm -f "$CONTENT_TYPE".tar.gz
             echo "::set-output name=have-tarfile::false"
           fi
-          echo "Output: ${{ steps.tarfile.outputs.* }}"
+          echo "Output: ${{ toJSON(steps.tarfile.outputs.*) }}"
           cd ..
           rm -f ./tarfiles.lst
         fi
