--- a/archive-collection/action.yml
+++ b/archive-collection/action.yml
@@ -55,6 +55,7 @@ runs:
       env:
         CONTENT_TYPE: ${{ inputs.content-type }}
       run: |
+        echo "::set-output name=have-tarfile::false"
         echo "CREATING TAR FILE ARTIFACT FOR CONTENT TYPE"
         rm -rf ./tmp
         mkdir -p ./tmp
@@ -75,7 +76,7 @@ runs:
             rm -f "$CONTENT_TYPE".tar.gz
             echo "::set-output name=have-tarfile::false"
           fi
-          echo "Output: ${{ toJSON(steps.tarfile.*) }}"
+          echo "Output: ${{ steps.tarfile.outputs.have-tarfile }}"
           cd ..
           rm -f ./tarfiles.lst
         fi
