--- a/archive-collection/action.yml
+++ b/archive-collection/action.yml
@@ -3,7 +3,7 @@ name: 'Archive Content Library Collections'
 description: 'Generates and uploads a combined tar.gz artifact for the specified content type.'
 
 inputs:
-  content-type: # The content type (e.g. "blueprints") to collect and upload as an artifact.
+  content-type:
     description: 'The content type (e.g. "blueprints") to collect and upload as a .tar.gz artifact.'
     required: true
 outputs:
@@ -42,10 +42,11 @@ runs:
             exit 1
         fi
 
-    - run: |
+    - name: Check Out Content Message
+      shell: bash -leo pipefail {0}
+      run: |
         echo "CHECKING OUT CONTENT"
         echo "===================="
-      shell: bash -leo pipefail {0}
 
     - name: Check Out Content
       uses: actions/checkout@v2
