--- a/publish-assets/action.yml
+++ b/publish-assets/action.yml
@@ -3,6 +3,9 @@ name: 'Publish Content Library Assets'
 description: 'Publishes content library assets to the configured S3 bucket.'
 
 inputs:
+  environment:
+    description: 'The environment to publish to. (Staging or Production)'
+    required: true
   aws-account-id:
     description: 'The AWS account ID to use for AWS API calls.'
     required: true
